Fix day small view layout issue.
Day view on bootstraps "small" view was extending beyond the desired height because text from "Important & Upcoming" was wrapping, which causes it's container to increase in size. I reduced the font size, which applys to both day & month views.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -664,7 +664,7 @@ ul.navbar-nav>li {
 
 .planner-month-sidebar-category {
 	color: #fff;
-	font-size: 18px;
+	font-size: 16px;
 	text-align: center;
 	vertical-align: center;
 	height: 35px;
